--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
+          node-version: '20'
           github_user_name: alefealves
           svg_out_path: dist/github-contribution-grid-snake.svg
 
